[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-wiki"
version = "0.1.0"
description = "Personal knowledge management tool — collect, compile, and wiki via LLM"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dateutil>=2.9",
    "youtube-transcript-api>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_wiki"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
