[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contents-hub"
version = "0.1.0"
description = "Personal knowledge management tool — collect, compile, and wiki via LLM"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39",
    "claude-agent-sdk>=0.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dateutil>=2.9",
    "youtube-transcript-api>=0.6",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[project.scripts]
contents-hub = "contents_hub.cli:main"
llm-wiki = "contents_hub.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/contents_hub", "src/llm_wiki"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
